--- a/SR.ModelImpl/SR.ModelImpl.csproj
+++ b/SR.ModelImpl/SR.ModelImpl.csproj
@@ -56,28 +56,9 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbModel\DbAaa.cs" />
-    <Compile Include="DbModel\DbBbb.cs" />
     <Compile Include="DbModel\DbContactPerson.cs" />
-    <Compile Include="DbModel\DbFinishingJob.cs" />
-    <Compile Include="DbModel\DbOrder.cs" />
-    <Compile Include="DbModel\DbPaperFormat.cs" />
-    <Compile Include="DbModel\DbPaperType.cs" />
-    <Compile Include="DbModel\DbPrintImplementation.cs" />
-    <Compile Include="DbModel\DbProofsheet.cs" />
     <Compile Include="DbModel\DbRights.cs" />
-    <Compile Include="Model\Aaa.cs" />
-    <Compile Include="Model\Bbb.cs" />
-    <Compile Include="Model\FinishingJobFlags.cs" />
     <Compile Include="Model\ContactPerson.cs" />
-    <Compile Include="Model\FinishingJob.cs" />
-    <Compile Include="Model\PaperFormats\PaperFormats.cs" />
-    <Compile Include="Model\Order.cs" />
-    <Compile Include="Model\Organisation.cs" />
-    <Compile Include="Model\PaperFormats\PaperFormat.cs" />
-    <Compile Include="Model\PaperType.cs" />
-    <Compile Include="Model\PrintImplementation.cs" />
-    <Compile Include="Model\Proofsheet.cs" />
     <Compile Include="DbModel\DbUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -102,39 +83,8 @@
     <EmbeddedResource Include="DbModel\Mapping\DbRights.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DbModel\Mapping\DbPaperFormat.hbm.xml" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DbModel\Mapping\DbFinishingJob.hbm.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DbModel\Mapping\DbOrder.hbm.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DbModel\Mapping\DbProofsheet.hbm.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DbModel\Mapping\DbPaperType.hbm.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DbModel\Mapping\DbAaa.hbm.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DbModel\Mapping\DbBbb.hbm.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DbModel\Mapping\DbRpintImplementation.hbm.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Content Include="DbModel\Mapping\TV.sql" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SR.Core\SR.Core.csproj">
@@ -145,6 +95,9 @@
       <Project>{c09b8b6f-df47-469c-a19c-8c2731f6c2c8}</Project>
       <Name>SR.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DbModel\Mapping\Reservito.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
