--- a/SR.Core/SR.Core.csproj
+++ b/SR.Core/SR.Core.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SR.Core</RootNamespace>
     <AssemblyName>SR.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -41,14 +41,6 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\NHibernate.4.0.4.4000\lib\net40\NHibernate.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -61,8 +53,12 @@
     <Compile Include="Context\UserContextData.cs" />
     <Compile Include="Context\UserContext.cs" />
     <Compile Include="Context\UserContextPrincipal.cs" />
+    <Compile Include="DbAccess\IDbOperationsFactory.cs" />
+    <Compile Include="DbAccess\QueryParam.cs" />
+    <Compile Include="DbAccess\QueryParams.cs" />
     <Compile Include="IAutentication.cs" />
     <Compile Include="ICoreFactory.cs" />
+    <Compile Include="DbAccess\IDbOperations.cs" />
     <Compile Include="IDbStorable.cs" />
     <Compile Include="DisposableBase.cs" />
     <Compile Include="Log\ILog.cs" />
@@ -81,12 +77,7 @@
     <Compile Include="UserManagement\UserManagementException.cs" />
     <Compile Include="Users\IUser.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
