--- a/SR.ModelImpl/SR.ModelImpl.csproj
+++ b/SR.ModelImpl/SR.ModelImpl.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SR.ModelImpl</RootNamespace>
     <AssemblyName>SR.ModelImpl</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -56,6 +56,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbAccess\DbOperations.cs" />
+    <Compile Include="DbAccess\DbOperationsFactory.cs" />
     <Compile Include="DbModel\DbContactPerson.cs" />
     <Compile Include="DbModel\DbRights.cs" />
     <Compile Include="Model\ContactPerson.cs" />
