--- a/SR.Reservito/SR.Reservito.csproj
+++ b/SR.Reservito/SR.Reservito.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C09B8B6F-DF47-469C-A19C-8C2731F6C2C8}</ProjectGuid>
+    <ProjectGuid>{535AE976-B4DB-4024-AB69-EAD2F6151C74}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SR.Model</RootNamespace>
-    <AssemblyName>SR.Model</AssemblyName>
+    <RootNamespace>SR.Reservito</RootNamespace>
+    <AssemblyName>SR.Reservito</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,20 +31,42 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHibernate.4.0.4.4000\lib\net40\NHibernate.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IContactPerson.cs" />
+    <Compile Include="Reservito.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SR.CoreImpl\SR.CoreImpl.csproj">
+      <Project>{24321645-b63d-4de9-8cf0-6aabca72d0bb}</Project>
+      <Name>SR.CoreImpl</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SR.Core\SR.Core.csproj">
       <Project>{00bc0114-1a43-48c4-94af-2a513b6e9605}</Project>
-      <Name>TV.Core</Name>
+      <Name>SR.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SR.ModelImpl\SR.ModelImpl.csproj">
+      <Project>{98ae7034-9395-41b8-b57c-46b6eb33937c}</Project>
+      <Name>SR.ModelImpl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SR.Model\SR.Model.csproj">
+      <Project>{c09b8b6f-df47-469c-a19c-8c2731f6c2c8}</Project>
+      <Name>SR.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
