--- a/SR.ModelImpl.Tests/packages.config
+++ b/SR.ModelImpl.Tests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net46" />
+  <package id="Npgsql" version="3.1.6" targetFramework="net461" />
   <package id="NUnit" version="3.4.1" targetFramework="net46" />
+  <package id="NUnit3TestAdapter" version="3.4.0" targetFramework="net461" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net46" />
 </packages>
