--- a/SR.ModelImpl/SR.ModelImpl.csproj
+++ b/SR.ModelImpl/SR.ModelImpl.csproj
@@ -58,9 +58,7 @@
   <ItemGroup>
     <Compile Include="DbAccess\DbOperations.cs" />
     <Compile Include="DbAccess\DbOperationsFactory.cs" />
-    <Compile Include="DbModel\DbContactPerson.cs" />
     <Compile Include="DbModel\DbRights.cs" />
-    <Compile Include="Model\ContactPerson.cs" />
     <Compile Include="DbModel\DbUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -70,9 +68,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DbModel\Mapping\DbContactPerson.hbm.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -100,6 +95,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DbModel\Mapping\Reservito.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
