--- a/SR.Model/SR.Model.csproj
+++ b/SR.Model/SR.Model.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICourse.cs" />
     <Compile Include="IWorkout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
