--- a/SR.ModelImpl/SR.ModelImpl.csproj
+++ b/SR.ModelImpl/SR.ModelImpl.csproj
@@ -56,10 +56,15 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbAccess\DbOperations.cs" />
+    <Compile Include="DbAccess\DbOperationsLongTimeSession.cs" />
+    <Compile Include="DbAccess\DbOperationsShortTimeSession.cs" />
     <Compile Include="DbAccess\DbOperationsFactory.cs" />
+    <Compile Include="DbModel\DbCourse.cs" />
     <Compile Include="DbModel\DbRights.cs" />
     <Compile Include="DbModel\DbUser.cs" />
+    <Compile Include="DbModel\DbWorkout.cs" />
+    <Compile Include="Model\Course.cs" />
+    <Compile Include="Model\Workout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -94,11 +99,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="DbModel\Mapping\DbWorkout.hbm">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="DbModel\Mapping\Reservito.sql" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
