Autentication + UserManagement under AppliactionContext Workout in DB

--- a/SR.CoreImpl.Tests/App.config
+++ b/SR.CoreImpl.Tests/App.config
@@ -11,7 +11,7 @@
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory name="NHibernate.Test">
       <property name="connection.driver_class">NHibernate.Driver.NpgsqlDriver</property>
-      <property name="connection.connection_string">Server=localhost;Database=reservito;User ID=remaster;Password=rmaster;</property>
+      <property name="connection.connection_string">Server=localhost;Port=5433;Database=reservito;User ID=remaster;Password=remaster;</property>
       <property name="dialect">NHibernate.Dialect.PostgreSQL82Dialect</property>
       <property name="default_schema">public</property>
       <mapping assembly="SR.ModelImpl"/>
