--- a/SR.ModelImpl.Tests/SR.ModelImpl.Tests.csproj
+++ b/SR.ModelImpl.Tests/SR.ModelImpl.Tests.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkoutTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
