--- a/SR.Model/SR.Model.csproj
+++ b/SR.Model/SR.Model.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="ICourse.cs" />
     <Compile Include="IWorkout.cs" />
+    <Compile Include="IWorkoutInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
