--- a/SR.Model/SR.Model.csproj
+++ b/SR.Model/SR.Model.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICourse.cs" />
-    <Compile Include="IModelObjectFactory.cs" />
+    <Compile Include="IDbModelObjectFactory.cs" />
     <Compile Include="IWorkout.cs" />
     <Compile Include="IWorkoutInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
